[package]
name = "Jatcher"
version = "0.1.0"
authors = ["penguin-wwy <940375606@qq.com>"]

# FIXME: rust link native library , that created by build.rs, make native library's global symbol locally
#links = "tools"
#build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate_type = [ "dylib", "staticlib" ]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dependencies]
simple-logging = "2.0.2"
log = "0.4.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"